--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.515.0",
     "mysql2": "^3.9.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
